<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JerseyDisplayActivity">

    <ImageView
        android:id="@+id/jerseyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/red_jersey" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numberView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/jersey_name"
        android:textColor="#FFF"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/numberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/jersey_number"
        android:textColor="#FFF"
        android:textSize="100dp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/edit_button" />

</RelativeLayout>
